# Initiation-Python

./: .gitignore  README.md
atelier-1-installation/: README.md  premier_script.py
atelier-10-projet-final/: README.md
atelier-10-projet-final/analyse_rh_version_poetry/: README.md  employes_dataset.csv  employes_transforme.csv  pyproject.toml  resultats.xlsx
atelier-10-projet-final/analyse_rh_version_setuptools/: README.md  main.py  resultats.xlsx  setup.py
atelier-2-syntaxe-base/: README_atelier_2.md  atelier-2-syntaxe-base.ipynb  atelier_2_syntaxe_base.py
atelier-3-structures-donnees/: README.md  atelier-3-structures-donnees.ipynb  atelier_3_collections.py
atelier-4-boucles-recursivite/: README_atelier_4.md  atelier-4-boucles-recursivite.ipynb  atelier_4_boucles_recursivite.py
atelier-5-chaines/: README.md  atelier_5_chaines_de_caracteres.ipynb  atelier_5_chaines_de_caracteres.py
atelier-6-modules_packages/: README.md  README_import_module_externe.md  atelier_6_modules_packages.ipynb  web_scraping.py  web_utils.py
atelier-7-calculs-et-export/: README.md  atelier_7_export_fichiers.ipynb  exportation.py  resultats.csv  resultats.xlsx
atelier-8-particularites-python/: README.md  atelier-8-particularites-python.ipynb  comprehension.py  decorateurs.py  fonctions_avancees.py  generateur.py
atelier-9-poo-bibliotheques/: README.md  atelier_9_poo_bibliothèque.ipynb  gestion_bibliotheque.py  main.py
atelier-9-poo-calculatrice/: README.md  atelier_9_oop_calculatrice.ipynb  calculatrice.py  calculatrice_scientifique.py  main.py
(+3 files in other folders)
